fix products/fundings spacing

--- a/resources/less/templates/cs-overview.less
+++ b/resources/less/templates/cs-overview.less
@@ -44,9 +44,11 @@
       font-size: 16px;
       line-height: 25px;
     }
+    .cs-overview-info .add-btn-text {
+      margin: auto 0 12px;
+    }
     .cs-overview-info .add-btn {
       padding: 20px 80px;
-      margin-top: auto;
       align-self: flex-start;
       border-radius: 30px;
       font-size: 14px;
@@ -112,14 +114,16 @@
     }
   }
   .cs-categories {
+    margin-right: -12px;
     margin-bottom: 36px;
     .cs-category {
       display: inline-block;
       font-weight: 600;
       font-size: 14px;
       line-height: 25px;
-      padding: 8px 14px;
+      padding: 6px 14px;
       margin-right: 15px;
+      margin-bottom: 6px;
       border-radius: 20px;
       color: #333;
       background-color: #F2F2F2;
@@ -382,7 +386,7 @@
     > .panel-body {
       .cs-category {
         font-size: 12px;
-        padding: 8px 12px;
+        padding: 6px 12px;
       }
       .header {
         font-size: 14px;
